--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,8 @@
 @import "vendor/bulma/bulma.sass";
 @import "layout/grid";
 
+@import "jspager";
+
 // show the active breakpoints (_mq.scss)
 // ==================================================/
 // @include mq-show-breakpoints;
