--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,7 +23,7 @@
 
 // // show col-* grid borders (_grid.scss)
 // // ==================================================/
-// @include col-grid-border(#000);
+@include col-grid-border(#000);
 
 // temp
 body {
