removed spaces on active pagebtn classNames

--- a/src/styles/_jspager.scss
+++ b/src/styles/_jspager.scss
@@ -162,6 +162,10 @@ body {
     .jspager1_pagebtn--active {
       background-color: green;
       color: #fff;
+    }
+
+    .jspager1_pagebtn_dots {
+      @extend %padd--4;
     }    
 
   .btn {
@@ -317,6 +321,10 @@ body {
       @include background-gradient(#bf0101, #cc0001, 'vertical'); 
       color: #fff;
     }
+
+    .jspager2_pagebtn_dots {
+      @extend %padd--4;
+    } 
 
     .jspager2_select,
     .jspager2_perpage,
@@ -508,6 +516,10 @@ body {
       @include background-gradient(#bf0101, #cc0001, 'vertical'); 
       color: #fff;
     }
+
+    .jspager3_pagebtn_dots {
+      @extend %padd--4;
+    } 
 
     .jspager3_select,
     .jspager3_perpage,
@@ -875,6 +887,10 @@ body {
       @include background-gradient(#bf0101, #cc0001, 'vertical'); 
       color: #fff;
     }
+
+    .jspager5_pagebtn_dots {
+      @extend %padd--4;
+    } 
 
     .jspager5_select,
     .jspager5_perpage,
